[package]
name = "xnode_vehicle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
rust-i18n = "3"
colored = "2.1.0"
static_assertions = "1.1.0"
futures-util = "0.3.31"

socketcan = { version = "3.3.0", features = ["tokio"] }
lazy_static = "1.5.0"
